need to fix duplicated calls and then get back to eda

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [ticker, fixed_quarter_date, earnings_call_date, Rating, Rating Agency Name, rating_date, Source, Rating Rank AAA is 10, Next Rating, Next Rating Date, Previous Rating, Previous Rating Date, next_rating_date_or_end_of_data, credit_rating_year, previous_fixed_quarter_date, days_since_call]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for duplicates on ticker by fixed_quarter_date\n",
+    "print(cr_and_dates[cr_and_dates.duplicated(subset=['ticker', 'fixed_quarter_date'], keep=False)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -190,6 +210,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      company  quarter  year        date  \\\n",
+      "2560      URI        3  2013  2013-04-17   \n",
+      "4099      BBQ        3  2011  2011-08-19   \n",
+      "4100      BBQ        4  2011  2011-08-19   \n",
+      "19299    PCAR        4  2010  2011-04-21   \n",
+      "19306    PCAR        1  2011  2011-04-21   \n",
+      "21209     URI        1  2013  2013-04-17   \n",
+      "25182    ENTG        3  2015  2015-07-30   \n",
+      "25183    ENTG        2  2015  2015-07-30   \n",
+      "29070     WDC        4  2011  2011-07-21   \n",
+      "29071     WDC        2  2011  2011-07-21   \n",
+      "30536    QRVO        3  2011  2011-10-26   \n",
+      "30542    QRVO        2  2012  2011-10-26   \n",
+      "30996     WRK        4  2013  2014-01-29   \n",
+      "31003     WRK        1  2014  2014-01-29   \n",
+      "\n",
+      "                                                 content  source  \n",
+      "2560   Operator: Good morning, and welcome to the Uni...  kaggle  \n",
+      "4099   Operator: [Operator Comments]\\nDiana Purcel: G...  kaggle  \n",
+      "4100   Diana Purcel: Good morning everyone and thank ...  kaggle  \n",
+      "19299  Operator: Good morning, and welcome to PACCAR'...     web  \n",
+      "19306  Operator: [Operator Instructions] Your first q...     web  \n",
+      "21209  Operator: Good morning, and welcome to the Uni...     web  \n",
+      "25182  Operator: Good day, ladies and gentlemen, and ...     web  \n",
+      "25183  Operator: Good day everyone and welcome to the...     web  \n",
+      "29070  Operator: Good afternoon, and thank you for st...     web  \n",
+      "29071  Operator: Good day, and welcome to the SanDisk...     web  \n",
+      "30536  Operator: Good afternoon, my name is Latosha, ...     web  \n",
+      "30542  Operator: Ladies and gentlemen, thank you for ...     web  \n",
+      "30996  Operator: Ladies and gentlemen, thank you for ...     web  \n",
+      "31003  Operator: Good morning. My name is Kathy. I wi...     web  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for duplicates on company by date\n",
+    "print(calls[calls.duplicated(subset=['company', 'date'], keep=False)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -247,6 +315,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ticker          fixed_quarter_date earnings_call_date Rating  \\\n",
+      "2553   PCAR  2011-07-01 00:00:00.000000         2011-04-21      A   \n",
+      "2554   PCAR  2011-07-01 00:00:00.000000         2011-04-21      A   \n",
+      "3422    URI  2013-07-01 00:00:00.000000         2013-04-17      B   \n",
+      "3423    URI  2013-07-01 00:00:00.000000         2013-04-17      B   \n",
+      "\n",
+      "                      Rating Agency Name rating_date         Source  \\\n",
+      "2553  Standard & Poor's Ratings Services  2011-05-31           Both   \n",
+      "2554  Standard & Poor's Ratings Services  2011-05-31           Both   \n",
+      "3422  Standard & Poor's Ratings Services  2012-02-22  Supplementary   \n",
+      "3423  Standard & Poor's Ratings Services  2012-02-22  Supplementary   \n",
+      "\n",
+      "      Rating Rank AAA is 10 Next Rating Next Rating Date  ...  \\\n",
+      "2553                      8           A       2011-12-21  ...   \n",
+      "2554                      8           A       2011-12-21  ...   \n",
+      "3422                      5           B       2013-11-26  ...   \n",
+      "3423                      5           B       2013-11-26  ...   \n",
+      "\n",
+      "     next_rating_date_or_end_of_data credit_rating_year  \\\n",
+      "2553                      2011-12-21               2011   \n",
+      "2554                      2011-12-21               2011   \n",
+      "3422                      2013-11-26               2012   \n",
+      "3423                      2013-11-26               2012   \n",
+      "\n",
+      "     previous_fixed_quarter_date  days_since_call company  quarter  year  \\\n",
+      "2553  2011-04-01 00:00:00.000000               71    PCAR        4  2010   \n",
+      "2554  2011-04-01 00:00:00.000000               71    PCAR        1  2011   \n",
+      "3422  2013-04-01 00:00:00.000000               75     URI        3  2013   \n",
+      "3423  2013-04-01 00:00:00.000000               75     URI        1  2013   \n",
+      "\n",
+      "            date                                            content  source  \n",
+      "2553  2011-04-21  Operator: Good morning, and welcome to PACCAR'...     web  \n",
+      "2554  2011-04-21  Operator: [Operator Instructions] Your first q...     web  \n",
+      "3422  2013-04-17  Operator: Good morning, and welcome to the Uni...  kaggle  \n",
+      "3423  2013-04-17  Operator: Good morning, and welcome to the Uni...     web  \n",
+      "\n",
+      "[4 rows x 22 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for duplicates on ticker by fixed_quarter_date\n",
+    "print(merged[merged.duplicated(subset=['ticker', 'fixed_quarter_date'], keep=False)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -255,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -408,6 +530,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ticker          fixed_quarter_date earnings_call_date Rating  \\\n",
+      "2531   PCAR  2011-07-01 00:00:00.000000         2011-04-21      A   \n",
+      "2532   PCAR  2011-07-01 00:00:00.000000         2011-04-21      A   \n",
+      "3388    URI  2013-07-01 00:00:00.000000         2013-04-17      B   \n",
+      "3389    URI  2013-07-01 00:00:00.000000         2013-04-17      B   \n",
+      "\n",
+      "                      Rating Agency Name rating_date         Source  \\\n",
+      "2531  Standard & Poor's Ratings Services  2011-05-31           Both   \n",
+      "2532  Standard & Poor's Ratings Services  2011-05-31           Both   \n",
+      "3388  Standard & Poor's Ratings Services  2012-02-22  Supplementary   \n",
+      "3389  Standard & Poor's Ratings Services  2012-02-22  Supplementary   \n",
+      "\n",
+      "      Rating Rank AAA is 10 Next Rating Next Rating Date  ...     marketCap  \\\n",
+      "2531                      8           A       2011-12-21  ...  2.097680e+10   \n",
+      "2532                      8           A       2011-12-21  ...  1.916035e+10   \n",
+      "3388                      5           B       2013-11-26  ...  5.550665e+09   \n",
+      "3389                      5           B       2013-11-26  ...  5.129251e+09   \n",
+      "\n",
+      "             EBIT common_plus_preferred_stock  workingCapital   Ratio_A  \\\n",
+      "2531  281900000.0                 365300000.0    5.822900e+09  0.019805   \n",
+      "2532  282300000.0                 365400000.0    1.007200e+09  0.018654   \n",
+      "3388  340000000.0                   1000000.0   -4.000000e+06  0.029404   \n",
+      "3389  162000000.0                   1000000.0   -5.800000e+07  0.014834   \n",
+      "\n",
+      "       Ratio_B   Ratio_C   Ratio_D   Ratio_E  Altman_Z  \n",
+      "2531  0.207305  2.363237  0.409081  0.340457  2.656066  \n",
+      "2532  0.216973  2.020111  0.066553  0.330098  2.030428  \n",
+      "3388  0.113379  0.564436 -0.000346 -0.015307  0.526095  \n",
+      "3389  0.100723  0.549995 -0.005311 -0.036901  0.420630  \n",
+      "\n",
+      "[4 rows x 156 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for duplicates on ticker by fixed_quarter_date\n",
+    "print(merged[merged.duplicated(subset=['ticker', 'fixed_quarter_date'], keep=False)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -416,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +717,7 @@
        "9                                   NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -900,6 +1070,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ticker          fixed_quarter_date earnings_call_date Rating  \\\n",
+      "2531   PCAR  2011-07-01 00:00:00.000000         2011-04-21      A   \n",
+      "2532   PCAR  2011-07-01 00:00:00.000000         2011-04-21      A   \n",
+      "3388    URI  2013-07-01 00:00:00.000000         2013-04-17      B   \n",
+      "3389    URI  2013-07-01 00:00:00.000000         2013-04-17      B   \n",
+      "\n",
+      "                      Rating Agency Name rating_date         Source  \\\n",
+      "2531  Standard & Poor's Ratings Services  2011-05-31           Both   \n",
+      "2532  Standard & Poor's Ratings Services  2011-05-31           Both   \n",
+      "3388  Standard & Poor's Ratings Services  2012-02-22  Supplementary   \n",
+      "3389  Standard & Poor's Ratings Services  2012-02-22  Supplementary   \n",
+      "\n",
+      "      Rating Rank AAA is 10 Next Rating Next Rating Date  ...  \\\n",
+      "2531                      8           A       2011-12-21  ...   \n",
+      "2532                      8           A       2011-12-21  ...   \n",
+      "3388                      5           B       2013-11-26  ...   \n",
+      "3389                      5           B       2013-11-26  ...   \n",
+      "\n",
+      "     Change Direction Since Last Fixed Quarter Date  \\\n",
+      "2531                                           None   \n",
+      "2532                Same As Last Fixed Quarter Date   \n",
+      "3388                Same As Last Fixed Quarter Date   \n",
+      "3389                Same As Last Fixed Quarter Date   \n",
+      "\n",
+      "     Change Since Last Fixed Quarter Date Ticker  \\\n",
+      "2531                                  NaN   PCAR   \n",
+      "2532                                  0.0   PCAR   \n",
+      "3388                                  0.0    URI   \n",
+      "3389                                  0.0    URI   \n",
+      "\n",
+      "                                            Description        Company Name  \\\n",
+      "2531  PACCAR Inc (PACCAR) is a global technology com...          PACCAR INC   \n",
+      "2532  PACCAR Inc (PACCAR) is a global technology com...          PACCAR INC   \n",
+      "3388  United Rentals, Inc. is an equipment rental co...  UNITED RENTALS INC   \n",
+      "3389  United Rentals, Inc. is an equipment rental co...  UNITED RENTALS INC   \n",
+      "\n",
+      "           Sector Industry Group                          Industry  \\\n",
+      "2531  Industrials  Capital Goods                         Machinery   \n",
+      "2532  Industrials  Capital Goods                         Machinery   \n",
+      "3388  Industrials  Capital Goods  Trading Companies & Distributors   \n",
+      "3389  Industrials  Capital Goods  Trading Companies & Distributors   \n",
+      "\n",
+      "                               Sub-Industry  \\\n",
+      "2531  Construction Machinery & Heavy Trucks   \n",
+      "2532  Construction Machinery & Heavy Trucks   \n",
+      "3388       Trading Companies & Distributors   \n",
+      "3389       Trading Companies & Distributors   \n",
+      "\n",
+      "                                                Comment  \n",
+      "2531  Manufacturers of heavy duty trucks, rolling ma...  \n",
+      "2532  Manufacturers of heavy duty trucks, rolling ma...  \n",
+      "3388  Trading companies and other distributors of in...  \n",
+      "3389  Trading companies and other distributors of in...  \n",
+      "\n",
+      "[4 rows x 169 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for duplicates on ticker by fixed_quarter_date\n",
+    "print(merged[merged.duplicated(subset=['ticker', 'fixed_quarter_date'], keep=False)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print if ticker = PCAR and fixed_quarter_date = 2011-07-01\n",
+    "# Compare fixed_quarter_date to datetime of 2011-07-01\n",
+    "#print(merged[(merged['ticker'] == 'PCAR') & (merged['fixed_quarter_date'] == pd.to_datetime('2011-07-01'))])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -908,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
