--- a/Code/Data Loading and Cleaning/Earning Calls/merge_calls.ipynb
+++ b/Code/Data Loading and Cleaning/Earning Calls/merge_calls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "[1848 rows x 6 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[86 rows x 6 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "Name: content, dtype: object"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -518,26 +518,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32939, 6)\n"
+      "(32939, 7)\n"
      ]
     }
    ],
    "source": [
     "# keep date in df_web\n",
+    "# flag for if source = 'web'\n",
+    "df_full['web'] = (df_full['source'] == 'web')\n",
+    "df_full = df_full.sort_values(['symbol', 'year', 'quarter', 'web'])\n",
     "df_full.drop_duplicates(subset = ['symbol', 'year', 'quarter'], keep = \"last\", inplace = True)\n",
     "print(df_full.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32938, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keep year and quarter in df_web\n",
+    "df_full = df_full.sort_values(['symbol', 'date', 'web'])\n",
+    "df_full.drop_duplicates(subset = ['symbol', 'date'], keep = \"last\", inplace = True)\n",
+    "print(df_full.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,24 +578,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count                          32939\n",
-       "mean      11 days 21:54:10.792100549\n",
-       "std      240 days 15:24:50.617821176\n",
+       "count                          32938\n",
+       "mean      11 days 21:52:33.507832898\n",
+       "std      240 days 15:29:58.743581968\n",
        "min             -2979 days +00:00:00\n",
        "25%                 11 days 00:00:00\n",
        "50%                108 days 13:30:07\n",
-       "75%                122 days 12:59:37\n",
+       "75%         122 days 12:59:49.500000\n",
        "max                484 days 17:00:00\n",
        "dtype: object"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +615,7 @@
        "1860"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,10 +636,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [symbol, quarter, year, date, content, source, web]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [symbol, quarter, year, date, content, source, web]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for duplicates\n",
+    "print(df_final[df_final.duplicated(subset=['symbol', 'date'], keep=False)])\n",
+    "print(df_final[df_final.duplicated(subset=['symbol', 'year', 'quarter'], keep=False)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parquet\n",
+    "df_final.to_parquet(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\combined_calls.parquet', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# csv\n",
     "df_final.to_csv(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\combined_calls.csv', index = False)"
    ]
   }
@@ -637,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
