merge_calls - now dedupe on symbol and date day

--- a/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
+++ b/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "[3171 rows x 14 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "27         2016-10-01"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "[9117 rows x 15 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1032,28 +1032,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>F</td>\n",
-       "      <td>2010-04-27 00:00:00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2011-02-15 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>F</td>\n",
-       "      <td>2010-07-23 00:00:00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2011-05-13 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>F</td>\n",
-       "      <td>2010-10-26 00:00:00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2011-08-16 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>F</td>\n",
-       "      <td>2011-01-28 00:00:00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2011-11-16 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>F</td>\n",
-       "      <td>2011-04-26 00:00:00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2012-02-16 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1061,29 +1061,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>31073</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-02-16 16:13:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>31074</th>\n",
-       "      <td>XPER</td>\n",
-       "      <td>2015-05-06 02:29:04</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-05-04 15:49:11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31075</th>\n",
-       "      <td>XPER</td>\n",
-       "      <td>2017-02-22 21:56:53</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-08-03 16:27:41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31076</th>\n",
-       "      <td>XPER</td>\n",
-       "      <td>2016-11-01 22:05:09</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-11-02 14:19:14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31077</th>\n",
-       "      <td>XPER</td>\n",
-       "      <td>2016-08-02 23:01:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31078</th>\n",
-       "      <td>XPER</td>\n",
-       "      <td>2016-05-02 19:40:21</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2017-02-16 15:19:17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1092,22 +1092,22 @@
       ],
       "text/plain": [
        "      ticker   earnings_call_date\n",
-       "0          F  2010-04-27 00:00:00\n",
-       "1          F  2010-07-23 00:00:00\n",
-       "2          F  2010-10-26 00:00:00\n",
-       "3          F  2011-01-28 00:00:00\n",
-       "4          F  2011-04-26 00:00:00\n",
+       "0          A  2011-02-15 00:00:00\n",
+       "1          A  2011-05-13 00:00:00\n",
+       "2          A  2011-08-16 00:00:00\n",
+       "3          A  2011-11-16 00:00:00\n",
+       "4          A  2012-02-16 00:00:00\n",
        "...      ...                  ...\n",
-       "31074   XPER  2015-05-06 02:29:04\n",
-       "31075   XPER  2017-02-22 21:56:53\n",
-       "31076   XPER  2016-11-01 22:05:09\n",
-       "31077   XPER  2016-08-02 23:01:30\n",
-       "31078   XPER  2016-05-02 19:40:21\n",
+       "31073    ZTS  2016-02-16 16:13:08\n",
+       "31074    ZTS  2016-05-04 15:49:11\n",
+       "31075    ZTS  2016-08-03 16:27:41\n",
+       "31076    ZTS  2016-11-02 14:19:14\n",
+       "31077    ZTS  2017-02-16 15:19:17\n",
        "\n",
        "[31078 rows x 2 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
        "[8041 rows x 15 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
