--- a/Code/Data Loading and Cleaning/Earning Calls/merge_calls.ipynb
+++ b/Code/Data Loading and Cleaning/Earning Calls/merge_calls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "[1848 rows x 6 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[86 rows x 6 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "Name: content, dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -540,27 +540,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32938, 7)\n"
+      "(32932, 8)\n"
      ]
     }
    ],
    "source": [
     "# keep year and quarter in df_web\n",
-    "df_full = df_full.sort_values(['symbol', 'date', 'web'])\n",
-    "df_full.drop_duplicates(subset = ['symbol', 'date'], keep = \"last\", inplace = True)\n",
+    "# Convert date to be just the date part\n",
+    "df_full['date_day'] = df_full['date'].dt.date\n",
+    "# deduplicate\n",
+    "df_full = df_full.sort_values(['symbol', 'date_day', 'web'])\n",
+    "df_full.drop_duplicates(subset = ['symbol', 'date_day'], keep = \"last\", inplace = True)\n",
     "print(df_full.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,24 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count                          32938\n",
-       "mean      11 days 21:52:33.507832898\n",
-       "std      240 days 15:29:58.743581968\n",
+       "count                          32932\n",
+       "mean      11 days 21:29:30.442426819\n",
+       "std      240 days 15:53:28.719423384\n",
        "min             -2979 days +00:00:00\n",
-       "25%                 11 days 00:00:00\n",
-       "50%                108 days 13:30:07\n",
-       "75%         122 days 12:59:49.500000\n",
+       "25%                 10 days 22:15:00\n",
+       "50%                108 days 13:26:37\n",
+       "75%         122 days 13:00:02.750000\n",
        "max                484 days 17:00:00\n",
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +618,7 @@
        "1860"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -644,23 +647,41 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [symbol, quarter, year, date, content, source, web]\n",
+      "Columns: [symbol, quarter, year, date, content, source, web, date_day]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [symbol, quarter, year, date, content, source, web]\n",
+      "Columns: [symbol, quarter, year, date, content, source, web, date_day]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [symbol, quarter, year, date, content, source, web, date_day]\n",
       "Index: []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_7080\\1960386828.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_final.drop(columns = ['date_day'], inplace = True)\n"
      ]
     }
    ],
    "source": [
     "# check for duplicates\n",
     "print(df_final[df_final.duplicated(subset=['symbol', 'date'], keep=False)])\n",
-    "print(df_final[df_final.duplicated(subset=['symbol', 'year', 'quarter'], keep=False)])"
+    "print(df_final[df_final.duplicated(subset=['symbol', 'year', 'quarter'], keep=False)])\n",
+    "# on date_day\n",
+    "print(df_final[df_final.duplicated(subset=['symbol', 'date_day'], keep=False)])\n",
+    "# drop date_day\n",
+    "df_final.drop(columns = ['date_day'], inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
